# phlocalization

./: README.md  pyproject.toml
.github/: .pre-commit-config.yaml  PULL_REQUEST_TEMPLATE.md  commitlint.config.js  ruff.toml
.github/scripts/: review.py
.github/workflows/: jslint.yml  pylint.yml  review.yml
bureau_of_internal_revenue/: __init__.py  hooks.py
bureau_of_internal_revenue-development/bureau_of_internal_revenue/: __init__.py
bureau_of_internal_revenue/bureau_of_internal_revenue/: setup.py
bureau_of_internal_revenue/bureau_of_internal_revenue/doctype/bir_cas_settings/: bir_cas_settings.js  bir_cas_settings.json  bir_cas_settings.py  test_bir_cas_settings.py
bureau_of_internal_revenue/bureau_of_internal_revenue/report/: _bir_header.html
bureau_of_internal_revenue/bureau_of_internal_revenue/report/accounts_payable_transaction_listing/: accounts_payable_transaction_listing.json  accounts_payable_transaction_listing.py
bureau_of_internal_revenue/bureau_of_internal_revenue/report/balance_sheet_bir/: balance_sheet_bir.json
bureau_of_internal_revenue/bureau_of_internal_revenue/report/balance_sheet_schedule_bir/: balance_sheet_schedule_bir.py
bureau_of_internal_revenue/bureau_of_internal_revenue/report/bir_ap_transaction_journal/: bir_ap_transaction_journal.js  bir_ap_transaction_journal.py
bureau_of_internal_revenue/bureau_of_internal_revenue/report/bir_project_360/: bir_project_360.js  (+2 more)
bureau_of_internal_revenue/public/js/: bir_cas_settings.js
docs/: Architecture and Structure.md  Project Requirements Document.md  Roadmap.md  phloc-skill.md
(+106 files in other folders)
