[project]
name = "comfacPHerpnextLocalization"
authors = [
    { name = "Ambibuzz Technologies LLP", email = "buzz.us@ambibuzz.com" }
]
description = "Comfac Philippine Localization — BIR statutory compliance for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe~=15.95.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = "~=15.95.0"

[tool.bench]
dev-dependencies = []

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
